--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "async": "^0.9.0",
     "coffee-script": "^1.8.0",
-    "strigoi": ">=0.1.0"
+    "minimist": "^1.1.0",
+    "strigoi": ">=0.2.0"
   },
   "repository": {
     "type": "git",
