--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strigoi-examples",
+  "name": "strigoi-tests",
   "version": "0.0.0",
   "author": "Paul Nechifor <paul@nechifor.net> (http://nechifor.net/)",
   "dependencies": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/paul-nechifor/strigoi-examples"
+    "url": "https://github.com/paul-nechifor/strigoi-tests"
   },
   "license": "MIT"
 }
